--- a/css/common.css
+++ b/css/common.css
@@ -1077,6 +1077,18 @@ hr {
     border-radius: 0;
 }
 
+.order-panel {
+    background: #fff;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.order-panel-title {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: inline-block;
+}
+
 #triangle {
     float: right;
     margin-top: -9px;
