--- a/css/common.css
+++ b/css/common.css
@@ -1079,7 +1079,7 @@ hr {
 
 #triangle {
     float: right;
-    margin-top: -9px;
+    margin: -10px -1px 0 0;
     width: 0;
     height: 0;
     border-top: 60px solid #baa071;
