时间弹窗样式修改

--- a/css/common.css
+++ b/css/common.css
@@ -266,9 +266,8 @@ button {
 }
 
 .calendar a {
-    /*color: #DD524D;*/
     color: gray;
-    background: #EFEFF4;
+    background: #fff;
 }
 
 .calendar a sup,
