--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -20,7 +20,7 @@
     </div> 
     
     <!--顶部-->
-    <header class="mui-bar mui-bar-nav mui-text-center" style="height: 48px;background-color:rgba(255,255,255,0.9);display: none;">
+    <header class="mui-bar mui-bar-nav mui-text-center" style="height: 48px;background-color:rgba(255,255,255,0.9);">
         <div id="menu" style="display: inline-block;float: left;">
             <img class="headImg" ms-attr-src="headImg" alt="" style="margin-left: 0;">
         </div>
@@ -36,6 +36,8 @@
 
     <div id="pullrefresh" class="mui-scroll-wrapper" ms-on-swipeup="su" ms-on-swipedown="sd">
         <div class="mui-scroll">
+            <br>
+            <br>
             <div class="mui-content">
                 <!--地址展示-->
                 <div class="bs-position" ms-on-tap="openLocationSearch">
@@ -45,7 +47,7 @@
                     </div>
                 </div>
                 <div class="bs-city">上海</div>
-                <div class="swiper-container swiper1" style="height: 100vw;margin-bottom: 15px;">
+                <div class="swiper-container swiper1" style="height: 100vw;margin-bottom: 15px;top: 7px;">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" ms-repeat="galleryList" data-repeat-rendered="swiper1Render">
                             <div style="width: 100%;height: 100%;background-size: cover;background-position: center;" ms-css-background-image="'url(' + urlAPINet + el.imgUrl+')'">
@@ -56,13 +58,13 @@
                 </div>
                 <!-- 打开日历按钮 -->
                 <div class="bs-btn-icon" style="top: 100vw;right: 60px;">
-                    <button type="button" class="calender-icon" style="background-image: url(img/calender.png);top: -25px;" ms-on-tap="openTimePanel">
-                        <div class="bs-text-red" style="margin: 7px 1px 0 0">{{getToday('day')}}</div>
+                    <button type="button" class="calender-icon" style="background-image: url(img/calender.png);top: 20px;" ms-on-tap="openTimePanel">
+                        <div class="bs-text-red" style="margin: 8px 1px 0 0">{{getToday('day')}}</div>
                     </button>
                 </div>
                 <!-- 打开地图按钮 -->
                 <div class="bs-btn-icon" style="top: 100vw;right: 0;">
-                    <button type="button" class="calender-icon" style="background-image: url(img/map.png);top: -25px;" ms-click="showMap">
+                    <button type="button" class="calender-icon" style="background-image: url(img/map.png);top: 20px;" ms-click="showMap">
                     </button>
                 </div>
 
