--- a/css/common.css
+++ b/css/common.css
@@ -1251,6 +1251,7 @@ hr {
 .bs-btn-sort {
     display: inline-block;
     margin: 0 0 10px 10px;
+    width: 62px;
 }
 
 .bs-position {
@@ -1265,7 +1266,7 @@ hr {
 
 .bs-city {
     position: relative;
-    top: 160px;
+    top: 190px;
     color: #fff;
     z-index: 10;
     font-size: 36px;
