gulp升级4.0;域名和api从config.js里拆分出来

--- a/js/layout/shell.html
+++ b/js/layout/shell.html
@@ -21,6 +21,8 @@
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="js/lib/avalon.mobile.shim.min.js"></script>
     <script src="js/lib/os.js" ></script>
+    <script src="js/domainName.js"></script>
+    <script src="js/api.js"></script>
     <script src="js/config.js"></script>
     <script src="js/pages/user/my.js"></script>
     <!-- js -->
