--- a/js/layout/shell-register.html
+++ b/js/layout/shell-register.html
@@ -13,6 +13,8 @@
     <script src="../js/lib/mui.min.js"></script>
     <script src="../js/lib/jquery.min.js"></script>
     <script src="../js/lib/avalon.mobile.shim.min.js"></script>
+    <script src="../js/domainName.js"></script>
+    <script src="../js/api.js"></script>
     <script src="../js/config.js"></script>
     <!-- js -->
     <script>
