--- a/js/layout/shell-top.html
+++ b/js/layout/shell-top.html
@@ -32,6 +32,8 @@
     <script src="js/lib/jquery.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="js/lib/avalon.mobile.shim.min.js"></script>
+    <script src="js/domainName.js"></script>
+    <script src="js/api.js"></script>
     <script src="js/config.js"></script>
     <script type="text/javascript" src="js/lib/os.js" ></script>
     <!-- js -->
