--- a/css/common.css
+++ b/css/common.css
@@ -3,8 +3,7 @@ body {
     background-color: #fff !important;
 }
 
-.ms-controller,
-[ms-controller] {
+.ms-controller [ms-controller]{
     display: none;
 }
 
@@ -1145,6 +1144,14 @@ hr {
     height: 0;
     border-top: 64px solid #baa071;
     border-left: 64px solid transparent;
+}
+
+.bs-text-xxx-larger {
+    font-size: 36px;
+}
+
+.bs-text-xx-larger {
+    font-size: 30px;
 }
 
 .bs-text-x-larger {
