--- a/css/franchisee.css
+++ b/css/franchisee.css
@@ -1,3 +1,7 @@
+.ms-controller {
+    visibility: hidden;
+}
+
 .swiper {
     background-color: #000;
     color: #baa071;
@@ -50,9 +54,7 @@
     font-weight: 100;
 }
 
-.verifyInput {
-
-}
+.verifyInput {}
 
 .sendBtn {
     color: #999;
@@ -62,4 +64,35 @@
     font-size: 12px;
     font-weight: 100;
     display: inline-block;
+}
+
+.fr-flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.fr-padding-20 {
+    padding: 20px;
+}
+
+.today-list-item {
+    padding: 12px 20px 7px 20px;
+}
+
+.header-up {
+    padding: 20px;
+}
+
+.header-middle {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.header-bottom {
+    padding: 20px;
+}
+
+.bs-bg-whtie p {
+    color: #000 !important;
 }
