--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -67,7 +67,9 @@
                     <button type="button" class="calender-icon" style="background-image: url(img/map.png);top: 20px;" ms-click="showMap">
                     </button>
                 </div>
-
+                <div>
+                    <div style="height: 90px;margin: 45px 10px 0 10px; background-position-x: -24px;background-image: url(img/night_room_banner.jpg); background-size: cover;"></div>
+                </div>
                 <span class="sub-title bs-text-gold" ms-if="isShowSeen">最近浏览过的</span>
                 <div ms-if="isShowSeen" class="swiper-container swiper2" style="height:auto; margin-bottom:10px;">
                     <div class="swiper-wrapper">
