店主页canvas在andriod系统里不对齐的bug修复

--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@ body {
     /*background-color: #fff !important;*/
 }
 
-.ms-controller {
+.ms-controller, [ms-controller] {
     display: none;
 }
 
