av2要屏蔽双花括号要在ms-controller的元素上添加class='ms-controller'

--- a/js/layout/shell-av2.html
+++ b/js/layout/shell-av2.html
@@ -10,6 +10,16 @@
     <!-- css -->
     <script src="js/lib/mui.min.js"></script>
     <script src="js/lib/jquery.min.js"></script>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="js/lib/avalon.modern.js"></script>
+    <style>
+        [ms-controller] {
+            display: inherit;
+        }
+        .ms-controller {
+            visibility: hidden;
+        }
+    </style>
 </head>
 
 <body class="mui-ios mui-ios-8 mui-ios-8-0">
@@ -17,8 +27,6 @@
         <!-- content -->
     </div>
         <!-- pop -->
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script src="js/lib/avalon.modern.js"></script>
     <script src="js/lib/os.js" ></script>
     <script src="js/domainName.js"></script>
     <script src="js/api.js"></script>
