--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -68,7 +68,7 @@
                     </button>
                 </div>
                 <!-- 广告位 -->
-                <div style="height: 90px;margin: 45px 10px 0 10px; background-position-x: -24px;background-image: url(img/night_room_banner.jpg); background-size: cover;" ms-on-tap="goMidnight"></div>
+                <div style="height: 90px;margin: 45px 10px 6px 10px; background-position-x: -24px;background-image: url(img/night_room_banner.jpg); background-size: cover;" ms-on-tap="goMidnight"></div>
 
                 <span class="sub-title bs-text-gold" ms-if="isShowSeen">最近浏览过的</span>
                 <div ms-if="isShowSeen" class="swiper-container swiper2" style="height:auto; margin-bottom:10px;">
