酒店页样式修改

--- a/css/common.css
+++ b/css/common.css
@@ -1075,7 +1075,7 @@ hr {
     height: 40px;
 }
 .hotel-room-amenity-item {
-    background: #efeff4;
+    /*background: #efeff4;*/
     width: auto !important;
 }
 .hotel-room-amenity-text {
