--- a/js/layout/shell-index.html
+++ b/js/layout/shell-index.html
@@ -29,9 +29,9 @@
             <img class="headImg" src="./img/index-btn-rightup.png" alt="" style="margin-right: 0; border-radius: 0;">
         </div>
 
-        <div id="midnight" class="bs-bg-black bs-text-white" style="position: fixed;z-index: 3;top: 48px;right: 0px;width: 100vw;text-align: center;line-height: 32px;" ms-on-tap="goMidnight">
-            <img src="img/midnight.svg" alt="" style="width: 27px;float: left;margin: 2px 0 0 8px;">
-            午夜特价房震撼来袭！！<span class="mui-icon mui-icon-closeempty" style="float: right;font-size: 32px;padding: 0px;margin: 0px;" ms-on-tap="closeMidnight"></span>
+        <div id="midnight" class="bs-bg-black bs-text-white" style="position: fixed;z-index: 3;top: 48px;right: 0px;width: 100vw;text-align: left;line-height: 32px;" ms-on-tap="goMidnight">
+            <img src="img/midnight.svg" alt="" style="width: 24px;float: left;margin: 4px 0 0 8px;">
+            &nbsp;<strong>午夜特价房</strong>震撼来袭！！！<span class="mui-icon mui-icon-closeempty" style="float: right;font-size: 32px;padding: 0px;margin: 0px;" ms-on-tap="closeMidnight"></span>
         </div>
     </header>
 
