入住时间默认选第二个 弹窗按钮调小 房间页面的房间设施swiper背景色一致 页面加载优化，减少白屏时间 下单交互，不再提示，自动弹框

--- a/js/layout/shell-top.html
+++ b/js/layout/shell-top.html
@@ -37,6 +37,7 @@
     <script src="js/config.js"></script>
     <script type="text/javascript" src="js/lib/os.js" ></script>
     <!-- js -->
+    <script src="js/util/popOver.js"></script>
     <script src="js/pages/user/my.js"></script>
     <script>
         mui.init();
