--- a/css/hotel.css
+++ b/css/hotel.css
@@ -7,13 +7,13 @@
     margin-top: 18px;
     width: 90%;
     overflow: hidden;
-    height: 75px;
+    height: 90px;
     transition: all 300ms;
 }
 
 .expand {
     width: 100%;
-    height: 75px;
+    height: 90px;
     font-size: 12px;
     text-align: left;
     display: block;
@@ -57,24 +57,21 @@
     background: white !important;
 }
 
-.expand:after {
+.tdclass:after {
     display: inline-block;
     content: '\e583';
     font-family: Muiicons;
     -webkit-transform: rotateZ(0deg);
     transition: transform 300ms;
     position: absolute;
-    top: 50%;
-    margin-top: -19px;
     right: 3px;
-    font-size: 15px;
 }
 
 .expanded {
     overflow: visible;
 }
 
-.expanded .expand:after {
+.expanded .tdclass:after {
     -webkit-transform: rotateZ(90deg);
 }
 
@@ -215,10 +212,11 @@
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #ccc;
+    font-weight: bolder;
 }
 
 .typeFilter-item {
-    margin: 15px 0px 10px 0px;
+    margin: 20px 0px 15px 0px;
     font-weight: bolder;
 }
 
@@ -229,7 +227,8 @@
 .pic-info .info {
     display: flex;
     justify-content: space-around;
-    padding: 25px 0px;
+    padding-top: 25px;
+    padding-bottom: 20px;
     border-top: 1px solid #ccc;
 }
 
