--- a/js/layout/shell-av2.html
+++ b/js/layout/shell-av2.html
@@ -31,6 +31,7 @@
     <script src="js/domainName.js"></script>
     <script src="js/api.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/util/popOver.js"></script>
     <script src="js/pages/user/my.js"></script>
     <!-- js -->
 </body>
