--- a/js/layout/shell-index.html
+++ b/js/layout/shell-index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/common.css">
     <!-- css -->
     <!-- <link href="css/font.css" rel="stylesheet"/>  -->
-    <script src="js/lib/mui.min.js"></script>
-    <script src="js/lib/jquery.min.js"></script>
 </head>
 
 <body class="mui-ios mui-ios-8 mui-ios-8-0">
@@ -39,12 +37,15 @@
         <!-- content -->
     </div>
         <!-- pop -->
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="js/lib/avalon.mobile.shim.min.js"></script>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="js/lib/jquery.min.js"></script>
+    <script src="js/lib/mui.min.js"></script>
     <script src="js/lib/os.js" ></script>
     <script src="js/domainName.js"></script>
     <script src="js/api.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/util/popOver.js"></script>
     <script src="js/pages/user/my.js"></script>
     <!-- js -->
 </body>
