--- a/js/layout/shell-index.html
+++ b/js/layout/shell-index.html
@@ -6,19 +6,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>本宿</title>
     <link href="css/mui.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/common.css">
+    <link href="css/common.css" rel="stylesheet" />
+    <link href="css/loading.css" rel="stylesheet" />
     <!-- css -->
     <!-- <link href="css/font.css" rel="stylesheet"/>  -->
 </head>
 
 <body class="mui-ios mui-ios-8 mui-ios-8-0">
     <!-- loading -->
-    <div id="container" style="z-index: 99;width: 100vw;height: 100vh;background: white;position: absolute;">
-        <div style="position: absolute;top: 25%;width: 100%;text-align: center;">
-            <div style="font-size: 2rem;margin-bottom: 100px">来本宿，不将就</div>
-            <img src="img/loading.gif" alt="" >
+    <div id="container" style="z-index: 99;width: 100vw;height: 100vh;background: black;position: absolute;">
+        <div style="position: absolute;top: 15%;width: 100%;text-align: center;">
+            <div class="all">
+                <img src="img\loading.svg" style="width: 150px; height: 150px;">
+                <div id="rond">
+                    <div id="test"></div>
+                </div>
+                <div class="bs-text-gold" style="font-size: 20px; margin-top: 5vh;">
+                    遵本心，轻奢宿
+                </div>
+            </div>
+            <div class="bs-text-normal bs-text-white" style="margin-top: 35vh;">
+                    正在获取您的地理位置......
+            </div>
         </div>
     </div> 
+
     <!--顶部-->
     <header ms-controller="hotel"  class="mui-bar mui-bar-nav mui-text-center" style="height: 48px;background-color:rgba(255,255,255,0.9);">
         <div id="menu" style="display: inline-block;float: left;">
