改红色的色值

--- a/css/common.css
+++ b/css/common.css
@@ -1192,7 +1192,8 @@ hr {
 }
 
 .bs-text-red {
-    color: #b20e15 !important;
+    /*color: #b20e15 !important;*/
+    color: #e93b39 !important;
 }
 
 .bs-text-gray {
