--- a/css/loading.css
+++ b/css/loading.css
@@ -10,7 +10,7 @@
     height: 27px;
     width: 27px;
     position: absolute;
-    background-color: #b20e15;
+    background-color: #e93b39;
     border-radius: 50%;
     top: 0px;
     margin: 10px;
