--- a/css/hotel.css
+++ b/css/hotel.css
@@ -210,14 +210,14 @@
     margin: 0 auto;
     margin-bottom: 5px;
     display: flex;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     border-top: 1px solid #ccc;
     font-weight: bolder;
 }
 
 .typeFilter-item {
-    margin: 20px 0px 15px 0px;
-    font-weight: bolder;
+    margin: 10px 0px 0px 0px;
+    font-weight: lighter;
 }
 
 .typeFilter-item.active {
@@ -233,11 +233,6 @@
 }
 
 .pic-info .info div {
-    /*border: 2px solid black;
-    border-radius: 50%;
-    height: 17vw;
-    width: 17vw;
-    line-height: 16.5vw;*/
     text-align: center;
 }
 
