首页接受操作类型参数，打开面板 换注册页面背景图 个人中心图标显示隐藏bug修改 替换管理模式下的logo

--- a/js/layout/shell-manage.html
+++ b/js/layout/shell-manage.html
@@ -18,7 +18,7 @@
             <h1 id="headerReplace" class="mui-title">标题</h1>
         </div>
         <a class="mui-btn-link" href="nav.html">
-            <img id="logo" src="../img/logo_color_black.jpg" alt="" style="margin: 7px -4px 0 0;width: 33px;height: 33px" onclick="window.location.href='nav.html'">
+            <img id="logo" src="../img/logo.jpg" alt="" style="margin: 7px -4px 0 0;width: 33px;height: 33px" onclick="window.location.href='nav.html'">
         </a>
     </header>
     <div class="mui-content">
