酒店页房间设施轮播背景色被回滚的bug修改

--- a/css/common.css
+++ b/css/common.css
@@ -1059,7 +1059,7 @@ hr {
     height: 40px;
 }
 .hotel-room-amenity-item {
-    background: #efeff4;
+    /*background: #efeff4;*/
     width: auto !important;
 }
 .hotel-room-amenity-text {
