--- a/css/common.css
+++ b/css/common.css
@@ -1081,8 +1081,8 @@ hr {
 .room-amenity-text {
     /*color: #b3b3b3;*/
     color: black;
-    margin-left: 15px;
-    margin-right: 22px
+    margin-left: 8px;
+    margin-right: 2px;
 }
 
 .room-designer-message {
