--- a/css/common.css
+++ b/css/common.css
@@ -1364,10 +1364,26 @@ hr {
     background-size: cover;
 }
 
+.hiddenbox {
+    margin: 0 20px 0 0;
+    position: absolute;
+    right: 0;
+}
 .unchecked {
-    background-image: url('../img/unchecked.png');
+    background-image: url('../img/unchecked.svg');
+}
+.checked {
+    background-image: url('../img/checked.svg');
 }
 
-.checked {
-    background-image: url('../img/checked.png');
+.nav-bottom-btn {
+    background: #000;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bolder;
+    width: 100vw;
+    border: none;
+    border-radius: 0;
+    height: 50px;
+
 }
