修改ios微信的bug：外层元素上的 click 事件不响应，数字自动识别为手机号

--- a/js/layout/shell-av2.html
+++ b/js/layout/shell-av2.html
@@ -23,9 +23,9 @@
 </head>
 
 <body class="mui-ios mui-ios-8 mui-ios-8-0">
-    <div class="mui-content">
+    <!-- <div class="mui-content"> -->
         <!-- content -->
-    </div>
+    <!-- </div> -->
         <!-- pop -->
     <script src="js/lib/os.js" ></script>
     <script src="js/domainName.js"></script>
