--- a/css/card.css
+++ b/css/card.css
@@ -1,4 +1,4 @@
-html { -webkit-text-size-adjust: none; }
+/*html { -webkit-text-size-adjust: none; }*/
 
 .card-frame {
     background-color: #eee;
@@ -11,7 +11,6 @@ html { -webkit-text-size-adjust: none; }
     align-items: center;
     padding: 10px 0 10px 10px;
     margin-bottom: 7px;
-    z-index: 10;
 }
 
 .card-list-item-title {
