--- a/css/card.css
+++ b/css/card.css
@@ -50,3 +50,100 @@
 .card-cardNo span {
     padding-right: 8px;
 }
+
+.swiper {
+    background-color: #000;
+    padding: 30px;
+    height: 100vh;
+}
+
+.swiper-slide {
+    background-color: #333;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 4vw 6vw 14vw 6vw;
+}
+
+.cash-btn {
+    width: 50vw;
+    margin-top: 16px;
+    border-color: #baa071;
+    border-radius: 0;
+    background: #333;
+}
+
+.card-bind-panel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 77vw;
+    height: 58vh;
+    background: #eee;
+    border-radius: 20px;
+    box-shadow: 2px 2px 5px #999;
+}
+
+.card-bind-panel input{
+    width: 200px;
+    display: block;
+    margin-top: 30px;
+    background: #eee;
+    border: none;
+    border-bottom: solid 0.5px #ccc;
+    text-align: center;
+}
+
+.card-bind-panel.left:before {
+    content: "";
+    position: relative;
+    left: -20%;
+    top: -20px;
+    border-bottom: 20px solid #eee;
+    border-right: 12px solid transparent;
+    border-left: 12px solid transparent;
+}
+
+.card-bind-panel.right:before {
+    content: "";
+    position: relative;
+    left: 20%;
+    top: -17px;
+    border-bottom: 20px solid #eee;
+    border-right: 12px solid transparent;
+    border-left: 12px solid transparent;
+}
+
+.card-log {
+    padding: 6vw;
+    min-height: 100vh;
+}
+
+.card-log-head {
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 75px;
+    margin-top: 15px;
+    padding: 12px 0 0 20vw;
+}
+.card-log-head.zfb{
+    background-image: url('../img/card/log_zhifubao.png');
+
+}
+.card-log-head.bank{
+    background-image: url('../img/card/log_bank.png');
+
+}
+
+.fr-flex {
+    display: flex !important;
+    justify-content: space-between;
+}
+.today-list-item {
+    display: inline-block;
+    padding: 10px 0 2px 0;
+}
+
+.card-no {
+    padding-right: 5px; 
+}
