推广完成任务交互调整 部分文案调整 卡展示页面增加跳转按钮

--- a/css/card.css
+++ b/css/card.css
@@ -32,7 +32,7 @@
     align-items: center;
     background-color: #ddd;
     padding: 18px 20px;
-    margin-bottom: 1.5px;
+    margin-bottom: 2px;
     margin-left: -10px;
 }
 .card-buy-item-left {
@@ -44,7 +44,7 @@
 }
 
 .card-show {
-    height: 50vh;
+    height: 250px;
     background-size: contain;
     background-repeat: no-repeat;
 }
