--- a/css/common.css
+++ b/css/common.css
@@ -497,7 +497,7 @@ button {
     text-shadow: #000 0 1px 10px;
 }
 
-#popModule {
+#popModule, .mask {
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -1267,6 +1267,10 @@ hr {
 
 .bs-bg-dark {
     background-color: #23262a;
+}
+
+.bs-bg-yellow {
+    background-color: #ffbc1b;
 }
 
 .bs-type-tab {
