绑定银行卡号时，添加省市地区选择功能

--- a/css/common.css
+++ b/css/common.css
@@ -1221,6 +1221,10 @@ hr {
     color: #999 !important;
 }
 
+.bs-text-aaa {
+    color: #aaa !important;
+}
+
 .bs-text-102 {
     color: #666 !important;
 }
