--- a/js/layout/shell.html
+++ b/js/layout/shell.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>本宿</title>
-    <link href="css/mui.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/common.css">
+    <link href="../css/mui.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/common.css">
     <!-- css -->
     <!-- <link href="css/font.css" rel="stylesheet"/>  -->
-    <script src="js/lib/mui.min.js"></script>
-    <script src="js/lib/jquery.min.js"></script>
+    <script src="../js/lib/mui.min.js"></script>
+    <script src="../js/lib/jquery.min.js"></script>
 </head>
 
 <body class="mui-ios mui-ios-8 mui-ios-8-0">
@@ -19,13 +19,13 @@
     </div>
         <!-- pop -->
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script src="js/lib/avalon.mobile.shim.min.js"></script>
-    <script src="js/lib/os.js" ></script>
-    <script src="js/domainName.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/util/popOver.js"></script>
-    <script src="js/pages/user/my.js"></script>
+    <script src="../js/lib/avalon.mobile.shim.min.js"></script>
+    <script src="../js/lib/os.js" ></script>
+    <script src="../js/domainName.js"></script>
+    <script src="../js/api.js"></script>
+    <script src="../js/config.js"></script>
+    <script src="../js/util/popOver.js"></script>
+    <script src="../js/pages/user/my.js"></script>
     <!-- js -->
 </body>
 
