--- a/css/promotion.css
+++ b/css/promotion.css
@@ -48,7 +48,7 @@
     height: 49px;
     line-height: 49px;
     border-radius: 50%;
-    margin: 10px;
+    margin: 15px 5px;
     font-size: 18px;
     font-weight: lighter;
 }
