推广任务提示修改 会员介绍里的预存款说明链接修改 先屏蔽卡日志的捐款按钮

--- a/js/layout/shell-top.html
+++ b/js/layout/shell-top.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>本酒店</title>
+    <title>本宿</title>
     <link href="css/mui.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/common.css">
     <!-- <link href="css/font.css" rel="stylesheet"/> -->
